More descriptive README and slight modification to routes file

--- a/README
+++ b/README
@@ -1,4 +1,3 @@
-This is your new Play 2.0 application
-=====================================
+A simple CRUD app to help former schoolmates spread out all over the globe quickly reach out to each other.
 
-This file will be packaged with your application, when using `play dist`.
+This application is inspired by consensus from former schoolmates about the need to have a simple webpage that contains information on alumni from Starehe Boys Centre and School based in Nairobi, Kenya. Especially when travelling globally or looking for an expert in an industry you are interested in, it would be nice to reach out via e-mail or telephone to someone... or someone who knows someone, you went to secondary school with.
